Сетка на флексах для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 
 <body class="page-body">
   <header class="header">
-    <h1 class="visually-hidden">Страница каталлога интернет-магазина ТЕХНОМАРТ</h1>
+    <h1 class="visually-hidden">Страница каталога интернет-магазина ТЕХНОМАРТ</h1>
     <section class="header-top">
       <div class="header-top-menu container">
         <a href="index.html" class="logo">
@@ -26,12 +26,16 @@
     </section>
     <section class="header-middle container">
       <p class="header-text">Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
-      <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
-      <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a href="blank.html" class="header-btn btn-username">Равшан Джамшутович</a>
-      <a href="blank.html" class="header-btn btn-exit">Выход</a>
-      <a href="blank.html" class="lnk-userdata lnk-my-orders">Мои заказы</a>
-      <a href="blank.html" class="lnk-userdata lnk-my-cabinet">Личный кабинет</a>
+      <div class="header-middle-contacts">
+        <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
+        <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      </div>
+      <div class="header-middle-buttons-username">
+        <a href="blank.html" class="header-btn btn-username">Равшан Джамшутович</a>
+        <a href="blank.html" class="header-btn btn-exit">Выход</a>
+        <a href="blank.html" class="lnk-userdata lnk-my-orders">Мои заказы</a>
+        <a href="blank.html" class="lnk-userdata lnk-my-cabinet">Личный кабинет</a>
+      </div>
     </section>
     <div class="container">
       <nav class="main-navigation">
@@ -105,7 +109,7 @@
             </ul>
           </div>
           <ul class="page-catalog-product-list">
-            <li class="product-item">
+            <li class="product-item product-item-catalog">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -115,7 +119,7 @@
               <p><del class="product-old-price">30500 Р.</del></p>
               <p class="product-price">25500 Р.</p>
             </li>
-            <li class="product-item">
+            <li class="product-item product-item-catalog">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -125,7 +129,7 @@
               <p><del class="product-old-price">30500 Р.</del></p>
               <p class="product-price">25500 Р.</p>
             </li>
-            <li class="product-item new">
+            <li class="product-item product-item-catalog new">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -135,7 +139,7 @@
               <p><del class="product-old-price">30500 Р.</del></p>
               <p class="product-price">25500 Р.</p>
             </li>
-            <li class="product-item new">
+            <li class="product-item product-item-catalog new">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -145,7 +149,7 @@
               <p><del class="product-old-price">22500 Р.</del></p>
               <p class="product-price">15500 Р.</p>
             </li>
-            <li class="product-item">
+            <li class="product-item product-item-catalog">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -155,16 +159,16 @@
               <p><del class="product-old-price">30500 Р.</del></p>
               <p class="product-price">25500 Р.</p>
             </li>
-            <li class="product-item new">
+            <li class="product-item product-item-catalog new">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
               </div>
               <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 2000" class="product-image">
-              <a href="blank.html" class="product-link">Перфоратор BOSC HBFG 2000</a>
+              <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 2000</a>
               <p class="product-price">12500 Р.</p>
             </li>
-            <li class="product-item new">
+            <li class="product-item product-item-catalog new">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -174,7 +178,7 @@
               <p><del class="product-old-price">22500 Р.</del></p>
               <p class="product-price">15500 Р.</p>
             </li>
-            <li class="product-item">
+            <li class="product-item product-item-catalog">
               <div class="product-hover">
                 <a href="blank.html" class="btn-green">Купить</a>
                 <a href="blank.html" class="btn-green-border">В закладки</a>
@@ -190,7 +194,7 @@
                 <a href="blank.html" class="btn-green-border">В закладки</a>
               </div>
               <img src="img/snippet-18927.jpg" alt="Перфоратор BOSCH BFG 2000" class="product-image">
-              <a href="blank.html" class="product-link">Перфоратор BOSCH HBFG 2000</a>
+              <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 2000</a>
               <p class="product-price">12500 Р.</p>
             </li>
           </ul>
@@ -217,7 +221,8 @@
         <h2 class="catalog-section-title about-products-title">Пара слов о перфораторах</h2>
         <p class="section-text about-products-text">Перфоратор — универсальный строительный инструмент.
           Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-          <br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
+          <br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
+          дрели,
           шуруповерта и отбойного молотка.
           <br>В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
           ударная дрель.</p>
