--- a/index.html
+++ b/index.html
@@ -26,37 +26,41 @@
     </section>
     <section class="header-middle container">
       <p class="header-text">Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
-      <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
-      <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a href="blank.html" class="header-btn btn-login">Войти</a>
-      <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
+      <div class="header-middle-contacts">
+        <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
+        <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      </div>
+      <div class="header-middle-buttons">
+        <a href="blank.html" class="header-btn btn-login">Войти</a>
+        <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
+      </div>
     </section>
     <div class="container">
       <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li class="navigation-item">
-          <a class="navigation-link">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Компания</a>
-        </li>
-        <li class="navigation-item">
-          <a href="catalog.html" class="navigation-link">Каталог</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Новости</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Спецпредложения</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Доставка</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Контакты</a>
-        </li>
-      </ul>
-    </nav>
+        <ul class="site-navigation">
+          <li class="navigation-item">
+            <a class="navigation-link">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Компания</a>
+          </li>
+          <li class="navigation-item">
+            <a href="catalog.html" class="navigation-link">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Новости</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Спецпредложения</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
     </div>
 
   </header>
@@ -91,7 +95,7 @@
           </div>
         </div>
       </div>
-      <ul class="catalog-cards-list catalog-cards-list-top">
+      <ul class="catalog-cards-list-top">
         <li class="card-item card-item-yellow new">
           <h3 class="card-title">Материалы</h3>
           <a href="blank.html" class="card-link">На любой вкус</a>
@@ -105,7 +109,7 @@
           <a href="blank.html" class="card-link">Для стройки</a>
         </li>
       </ul>
-      <ul class="catalog-cards-list catalog-cards-list-right">
+      <ul class="catalog-cards-list-right">
         <li class="card-item card-item-green">
           <h3 class="card-title">Скидки 50%</h3>
           <a href="blank.html" class="card-link">На 350 товаров</a>
@@ -122,47 +126,52 @@
         <a href="blank.html" class="btn btn-product">Все популярные товары</a>
       </div>
       <ul class="product-list">
-        <li class="product-item">
+        <li class="product-item product-item-main">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-32961.jpg" class="product-image" width="184" height="164"
-            alt="Перфоратор BOSCH BFG 9000">
-          <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 9000</a>
-          <p><del class="product-old-price">32500 Р.</del></p>
-          <p class="product-price">25500 Р.</p>
+          <div class="product-image">
+            <img src="img/snippet-32961.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+          </div>
+            <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 9000</a>
+            <p class="product-old-price-p"><del class="product-old-price">32500 Р.</del></p>
+            <p class="product-price">25500 Р.</p>
         </li>
-        <li class="product-item new">
+        <li class="product-item new product-item-main">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112"
-            alt="Перфоратор BOSCH BFG 3000">
-          <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
-          <p><del class="product-old-price">22500 Р.</del></p>
-          <p class="product-price">15500 Р.</p>
+          <div class="product-image">
+            <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+          </div>
+            <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
+            <p class="product-old-price-p"><del class="product-old-price">22500 Р.</del></p>
+            <p class="product-price">15500 Р.</p>
         </li>
-        <li class="product-item">
+        <li class="product-item product-item-main">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-945.jpg" class="product-image" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-          <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
-          <p><del class="product-old-price">30500 Р.</del></p>
-          <p class="product-price">25500 Р.</p>
+          <div class="product-image">
+            <img src="img/snippet-945.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+          </div>
+            <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 6000</a>
+            <p class="product-old-price-p"><del class="product-old-price">30500 Р.</del></p>
+            <p class="product-price">25500 Р.</p>
         </li>
-        <li class="product-item new">
+        <li class="product-item product-item-main new">
           <div class="product-hover">
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112"
-            alt="Перфоратор BOSCH BFG 2000">
-          <a href="blank.html" class="product-link">Перфоратор BOSCH HBFG 2000</a>
-          <p class="product-price">12500 Р.</p>
+          <div class="product-image">
+            <img src="img/snippet-18927.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+          </div>
+            <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 2000</a>
+            <p class="product-price">12500 Р.</p>
         </li>
       </ul>
     </section>
@@ -215,7 +224,7 @@
       </ul>
     </section>
     <section class="services">
-      <div class="services-grid container">
+      <div class="services-inner container-960">
         <h2 class="section-title">Сервисы</h2>
         <p class="section-text">Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
@@ -230,125 +239,134 @@
           </div>
           <div class="services-slider-inner">
             <div class="services-slider-slides">
-              <div class="service-slide service-slide-delivery">
+              <div class="service-slide">
                 <h3 class="service-slide-title">Доставка</h3>
                 <p class="section-text">Мы с удовольствием доставим ваш товар прямо<br>
                   к вашему подъезду совершенно бесплатно!<br>
                   Ведь мы неплохо заработаем,<br>
                   поднимая его на ваш этаж!</p>
               </div>
-              <div class="service-slide service-slide-warranty">
+              <div class="service-slide">
                 <h3 class="service-slide-title">Гарантия</h3>
-                <p class="section-text">Какой то текст про гарантию <br>
-                  Какой то текст про гарантию <br>
-                  Какой то текст про гарантию <br>
-                  Какой то текст про гарантию</p>
+                <p class="section-text">Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
               </div>
-              <div class="service-slide service-slide-credit">
+              <div class="service-slide">
                 <h3 class="service-slide-title">Кредит</h3>
-                <p class="section-text">Текст, призывающий взять кредит <br>
-                  Текст, призывающий взять кредит <br>
-                  Текст, призывающий взять кредит <br>
-                  Текст, призывающий взять кредит</p>
+                <p class="section-text">Залезть в долговую яму стало проще! <br>Кредитные консультанты придут вам на помощь.</p>
+                <a href="blank.html" class="btn-service-credit">Отправить заявку</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="company-contacts container">
-      <h3 class="section-title title-company">КОМПАНИЯ «Техномарт»</h3>
-      <p class="section-text text-company-top">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
-        <br>ремонта и
-        строительства не оставит равнодушными любителей сэкономить на <br>гастарбайтерах.</p>
-      <p class="section-text text-company-bottom">
-        Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-        Техномарт работает со многими транспортными компаниями:</p>
-      <ul class="delivery-companies">
-        <li class="delivery-company-item">
-          <a href="blank.html" class="delivery-company-link">Деловые линии</a>
-        </li>
-        <li class="delivery-company-item">
-          <a href="blank.html" class="delivery-company-link">Автотрейдинг</a>
-        </li>
-        <li class="delivery-company-item">
-          <a href="blank.html" class="delivery-company-link">ЖелДорЭкспедиция</a>
-        </li>
-      </ul>
-      <a href="blank.html" class="btn btn-company">Подробнее о компании</a>
-      <h3 class="section-title title-contacts">Контакты</h3>
-      <p class="section-text text-contacts">Вы можете забрать товар сами,<br>
-        заехав в наш офис:</p>
-      <iframe class="map-contacts"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412363!2d30.32089461559019!3d59.938796869048495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1599822734057!5m2!1sru!2sru"
-        width="300" height="158" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-        tabindex="0"></iframe>
-      <a href="blank.html" class="btn btn-contacts">Заблудились? Напишите нам!</a>
-    </section>
+    <div class="company-contacts container">
+      <section class="company">
+        <h3 class="section-title title-company">КОМПАНИЯ «Техномарт»</h3>
+        <p class="section-text text-company-top">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+          <br>ремонта и
+          строительства не оставит равнодушными любителей сэкономить на <br>гастарбайтерах.</p>
+        <p class="section-text text-company-bottom">
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:</p>
+        <ul class="delivery-companies">
+          <li class="delivery-company-item">
+            <a href="blank.html" class="delivery-company-link">Деловые линии</a>
+          </li>
+          <li class="delivery-company-item">
+            <a href="blank.html" class="delivery-company-link">Автотрейдинг</a>
+          </li>
+          <li class="delivery-company-item">
+            <a href="blank.html" class="delivery-company-link">ЖелДорЭкспедиция</a>
+          </li>
+        </ul>
+        <a href="blank.html" class="btn btn-company">Подробнее о компании</a>
+      </section>
+      <section class="contacts">
+        <h3 class="section-title title-contacts">Контакты</h3>
+        <p class="section-text text-contacts">Вы можете забрать товар сами,<br>
+          заехав в наш офис:</p>
+        <iframe class="map-contacts"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412363!2d30.32089461559019!3d59.938796869048495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1599822734057!5m2!1sru!2sru"
+          width="300" height="158" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+          tabindex="0"></iframe>
+        <a href="blank.html" class="btn btn-contacts">Заблудились? Напишите нам!</a>
+      </section>
+
+    </div>
   </main>
   <footer class="page-footer main-footer">
     <div class="footer-top">
-      <div class="grid-footer-top container">
-        <a class="logo-footer">
-          <img src="img/logo-footer.svg" alt="ТЕХНОМАРТ" width="138" height="23">
-        </a>
-        <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-        <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
-        <ul class="footer-navigation-list">
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Компания</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Новости</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Каталог</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Доставка</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Контакты</a>
-          </li>
-        </ul>
-        <ul class="footer-catalog-list">
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Материалы</a>
-          </li>
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Техника</a>
-          </li>
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Инструмент</a>
-          </li>
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
-          </li>
-        </ul>
+      <div class="footer-top-inner container">
+        <div class="footer-top-left">
+          <a class="logo-footer">
+            <img src="img/logo-footer.svg" alt="ТЕХНОМАРТ" width="138" height="23">
+          </a>
+          <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+          <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
+        </div>
+        <div class="footer-top-right">
+          <ul class="footer-navigation-list">
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Компания</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Новости</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Каталог</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Доставка</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="footer-catalog-list">
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Материалы</a>
+            </li>
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Техника</a>
+            </li>
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Инструмент</a>
+            </li>
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
     <div class="footer-bottom">
-      <div class="grid-footer-bottom container">
+      <div class="footer-bottom-inner container">
         <p class="footer-copyright">&copy; 2010-2020 Компания «Техномарт» <br>
           Все права защищены</p>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="footer-social-link">Вконтакте</a>
+            <a class="footer-social-link social-link-vk"></a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link">Facebook</a>
+            <a class="footer-social-link social-link-fb"></a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link">Instagram</a>
+            <a class="footer-social-link social-link-in"></a>
           </li>
         </ul>
-        <p class="footer-contacts-text footer-email">Обратная связь</p>
-        <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
-        <p class="footer-contacts-text footer-develop">Разработано -</p>
-        <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+        <div class="footer-bottom-right">
+          <div class="feedback">
+            <p class="footer-contacts-text footer-email">Обратная связь:</p>
+            <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
+          </div>
+          <div class="develop">
+            <p class="footer-contacts-text footer-develop">Разработано -</p>
+            <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+          </div>
+        </div>
       </div>
-
     </div>
   </footer>
 </body>
